Fix spacing featured in

--- a/src/components/Home/featuredIn.css
+++ b/src/components/Home/featuredIn.css
@@ -1,8 +1,7 @@
 .section-featured-in {
-  padding: 0rem 9.6rem;
+  padding: 0rem 9.6rem 4.6rem;
   background-color: #f1f3f5;
-  margin-top: -6.2rem;
-  padding-bottom: 4.6rem;
+  margin-top: -4.6rem;
 }
 
 .about-image-container {
